--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 h2 {
-  @apply lg:leading-snug mb-4 font-sans tracking-tight font-medium;
+  @apply lg:leading-[1.2] mb-4 font-sans tracking-tight font-medium;
   font-size: clamp(1.8rem, 4vw + 0.9rem, 3rem);
 }
 
@@ -164,7 +164,7 @@ h6 {
 }
 
 .content_block {
-  @apply [&>h2]:text-2xl sm:[&>h2]:text-3xl [&>h2]:font-semibold [&>h2]:pt-4 [&>p>img]:rounded-2xl [&>p]:text-lg [&>p]:py-4 [&>p]:leading-8 [&>h3]:text-2xl [&>h3]:font-semibold [&>ul]:mb-8 [&>ul]:list-disc [&>ul]:pl-4 [&>ul>li]:leading-8 [&>ul>li]:mb-4 [&>ol]:list-decimal [&>ol]:pl-4 [&>ol>li]:leading-8 [&>ol>li]:mb-4 mb-10 px-7;
+  @apply [&>h2]:pt-4 [&>p>img]:rounded-2xl [&>p]:text-lg [&>p]:py-4 [&>p]:leading-8 [&>ul]:mb-8 [&>ul]:list-disc [&>ul]:pl-4 [&>ul>li]:leading-8 [&>ul>li]:mb-4 [&>ol]:list-decimal [&>ol]:pl-4 [&>ol>li]:leading-8 [&>ol>li]:mb-4 mb-10 px-7;
 }
 
 .image_text_split .content_block {
@@ -261,8 +261,18 @@ h6 {
   display: none;
 }
 
+/* Fallback for older browsers */
 .content_block a {
   color: #a82a00;
+}
+/* Override for modern browsers using :not() */
+.content_block a:not(.bttn):not(.primary_btn) {
+  color: #a82a00;
+}
+/* Explicitly reset the styles for .bttn and .primary_btn in case :not() is not supported */
+.content_block a.bttn,
+.content_block a.primary_btn {
+  color: initial;
 }
 
 .header-transition {
@@ -343,7 +353,7 @@ h6 {
   }
 }
 .bttn {
-  @apply font-sans text-base font-semibold border border-solid rounded-3xl pt-3 pb-3 pl-6 pr-6;
+  @apply font-sans text-lg font-medium border border-solid rounded-full py-5 pl-6 pr-6;
 }
 
 .big_bullets {
@@ -953,7 +963,7 @@ i.icon-none {
 }
 
 .primary_btn {
-  @apply bg-[#38b6ff] hover:bg-[#1a94d6] text-white p-2 px-6 py-3 rounded-full transition duration-300 text-[18px];
+  @apply bg-[#38b6ff] hover:bg-[#1a94d6] !text-white px-6 py-5 rounded-full transition duration-300 text-[18px];
 }
 
 @media (max-width: 1499px) {
@@ -976,27 +986,34 @@ i.icon-none {
   }
 }
 
-.banner_simple_intro h1 i{
-  @apply relative not-italic;
+.banner_simple_intro h1 i {
+  @apply relative not-italic inline-block;
 }
 
 .banner_simple_intro h1 i::after {
-  
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 32px;
-    background: url('https://a.storyblok.com/f/305962/0x0/d8e9bfd9bc/squiggle-underline.svg?cv=1727693350939') center no-repeat;
-    bottom: -10px;
-    left: 0;
-
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 32px;
+  background: url("https://a.storyblok.com/f/305962/0x0/d8e9bfd9bc/squiggle-underline.svg?cv=1727693350939")
+    center no-repeat;
+  bottom: -10px;
+  left: 0;
 }
 
-.review_name h3{
+@media (max-width: 767px) {
+  .banner_simple_intro h1 i::after {
+    height: 18px;
+    bottom: -6px;
+  }
+}
+
+.review_name h3 {
   @apply text-xl;
 }
-.review_name p, .review_description p {
- @apply text-base;
+.review_name p,
+.review_description p {
+  @apply text-base;
 }
 
 .review {
@@ -1004,9 +1021,8 @@ i.icon-none {
 }
 
 .review_section_title {
-  @apply text-center text-white mb-24 leading-snug
+  @apply text-center text-white mb-24 leading-snug;
 }
-.review_section_title h2{
-  @apply font-semibold
+.review_section_title h2 {
+  @apply font-semibold;
 }
-
