--- a/app/globals.css
+++ b/app/globals.css
@@ -994,11 +994,18 @@ i.icon-none {
   content: "";
   position: absolute;
   width: 100%;
-  height: 32px;
+  height: 30px;
   background: url("https://a.storyblok.com/f/305962/0x0/d8e9bfd9bc/squiggle-underline.svg?cv=1727693350939")
     center no-repeat;
   bottom: -10px;
   left: 0;
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .banner_simple_intro h1 i::after {
+    height: 25px;
+    bottom: -26px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1025,4 +1032,40 @@ i.icon-none {
 }
 .review_section_title h2 {
   @apply font-semibold;
+}
+
+@media (max-width: 1399px) {
+  .simple_content_grid .sm_grid {
+    @apply !grid-cols-2
+  }
+}
+
+@media (max-width: 1199px) {
+  .simple_content_grid .inner_grid {
+    @apply !col-span-full
+  }
+  .simple_content_grid h2 {
+    line-height: 1.2;
+  }
+}
+
+.simple_content_grid h2 {
+  font-size: 2.0em;
+  padding-top: 0;
+}
+.simple_content_grid h3 {
+  position: relative;
+  font-size: 1.5em;
+  line-height: 1.15;
+}
+
+.simple_content_grid h3:before {
+  content: '';
+  position: absolute;
+  top: -17px;
+  left: 2px;
+  width: 10px;
+  height: 10px;
+  background-color: #35384b;
+  transform: rotate(45deg);
 }
